--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="settings-section">
                 <h4>Eigenes Schichtsystem festlegen</h4>
                 <div class="settings-option">
-                    <label for="customShiftSequence">Schicht- & Freie-age-Sequenz (z.B. F,F,N,N,S,S,Frei,Frei):</label>
+                    <label for="customShiftSequence">Schicht- & Freie-Tage-Sequenz (z.B. F,F,N,N,S,S,Frei,Frei):</label>
                     <input type="text" id="customShiftSequence" placeholder="F,F,F,F,F,Frei,Frei,N,N,N,N,N,Frei,Frei,S,S,S,S,S,Frei,Frei">
                 </div>
                 <div class="settings-option">
