--- a/index.html
+++ b/index.html
@@ -110,28 +110,6 @@
             <button class="close-button" id="closeSettingsDialog">&times;</button>
             <h3>Einstellungen</h3>
 
-            <div class="settings-section">
-                <h4>Eigenes Schichtsystem festlegen</h4>
-                <div class="settings-option">
-                    <label for="customShiftSequence">Schicht- & Freie-Tage-Sequenz (z.B. F,F,N,N,S,S,Frei,Frei):</label>
-                    <input type="text" id="customShiftSequence" placeholder="F,F,F,F,F,Frei,Frei,N,N,N,N,N,Frei,Frei,S,S,S,S,S,Frei,Frei">
-                </div>
-                <div class="settings-option">
-                    <label for="customShiftStartDate">Startdatum des Zyklus (TT.MM.JJJJ):</label>
-                    <input type="date" id="customShiftStartDate">
-                </div>
-                <div class="settings-option">
-                    <label for="customShiftStartType">Schichtart am Startdatum (z.B. Früh, Nacht, Spät, Frei):</label>
-                    <input type="text" id="customShiftStartType" placeholder="Früh">
-                </div>
-                <div class="button-group">
-                    <button id="saveCustomShiftSystem" class="confirm-button">Schichtsystem speichern</button>
-                    <button id="resetCustomShiftSystem" class="confirm-button">Schichtsystem zurücksetzen</button>
-                </div>
-                <p class="small-text">Verwende 'F' für Frühschicht, 'N' für Nachtschicht, 'S' für Spätschicht und 'Frei' für freie Tage. Trenne die Einträge mit Kommas.</p>
-            </div>
-            <hr>
-
             <div class="settings-option">
                 <label for="toggleAnimations">Animationen ausschalten:</label>
                 <input type="checkbox" id="toggleAnimations">
@@ -147,6 +125,32 @@
             <div class="settings-option">
                 <label for="toggleDarkMode">Dark Mode aktivieren:</label>
                 <input type="checkbox" id="toggleDarkMode">
+            </div>
+
+            <hr>
+
+            <div class="settings-section">
+                <button id="openCustomShiftSystemSettings" class="action-button">Eigenes Schichtsystem festlegen</button>
+                <div id="customShiftSystemSection" style="display: none;">
+                    <h4>Schichtsystem-Details</h4>
+                    <p class="small-text">Hier kannst du dein eigenes Schichtsystem definieren. Trenne die Schichttypen mit Kommas (z.B. F,F,F,N,N,Frei).</p>
+                    <div class="settings-option">
+                        <label for="customShiftSequence">Schicht- & Freie-Tage-Sequenz (z.B. F,F,N,N,S,S,Frei,Frei):</label>
+                        <input type="text" id="customShiftSequence" placeholder="F,F,F,F,F,Frei,Frei,N,N,N,N,N,Frei,Frei,S,S,S,S,S,Frei,Frei">
+                    </div>
+                    <div class="settings-option">
+                        <label for="customShiftStartDate">Startdatum des Zyklus (JJJJ-MM-TT):</label>
+                        <input type="date" id="customShiftStartDate">
+                    </div>
+                    <div class="settings-option">
+                        <label for="customShiftStartType">Schichtart am Startdatum (z.B. Früh, Nacht, Spät, Frei):</label>
+                        <input type="text" id="customShiftStartType" placeholder="Früh">
+                    </div>
+                    <div class="button-group">
+                        <button id="saveCustomShiftSystem" class="confirm-button">Schichtsystem speichern</button>
+                        <button id="resetCustomShiftSystem" class="confirm-button">Standard-Rhythmus einstellen</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
