--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h3>Einstellungen</h3>
 
             <div class="settings-option">
-                <label for="toggleAnimations">Animationen ausschalten:</label>
+                <label for="toggleAnimations">Pulsieren ausschalten:</label>
                 <input type="checkbox" id="toggleAnimations">
             </div>
             <div class="settings-option">
