--- a/index.html
+++ b/index.html
@@ -152,6 +152,15 @@
                     </div>
                 </div>
             </div>
+
+            <div class="settings-section">
+                <h4>Einstellungen sichern & laden</h4>
+                <p class="small-text">Sichere deine aktuellen Einstellungen (Schichtsystem, Notizen, Design) oder lade ein gespeichertes Backup.</p>
+                <div class="button-group">
+                    <button id="backupSettingsButton" class="action-button">Backup erstellen</button>
+                    <button id="restoreSettingsButton" class="action-button">Backup laden</button>
+                </div>
+            </div>
         </div>
     </div>
 
