--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/worker.js')
+                navigator.serviceWorker.register('./service-worker.js') // Oder 'service-worker.js'
                     .then(registration => {
                         console.log('Service Worker registriert mit Scope:', registration.scope);
                     })
