--- a/index.html
+++ b/index.html
@@ -152,7 +152,13 @@
                     </div>
                 </div>
             </div>
-        </div>
+
+            ---
+            <div class="settings-section">
+                <button class="action-button" id="backupSettingsButton">Backup erstellen</button>
+                <button class="action-button" id="restoreSettingsButton">Backup laden</button>
+            </div>
+            </div>
     </div>
 
     <div class="dialog-overlay" id="yearInputDialogOverlay">
