--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <input type="text" id="customShiftSequence" placeholder="F,F,F,F,F,Frei,Frei,N,N,N,N,N,Frei,Frei,S,S,S,S,S,Frei,Frei">
                     </div>
                     <div class="settings-option">
-                        <label for="customShiftStartDate">Startdatum des Zyklus (JJJJ-MM-TT):</label>
+                        <label for="customShiftStartDate">Startdatum des Zyklus (TT/MM/JJJJ):</label>
                         <input type="date" id="customShiftStartDate">
                     </div>
                     <div class="settings-option">
@@ -152,8 +152,13 @@
                     </div>
                 </div>
             </div>
-
-            ---
+            Bei einem Handywechsel kann der aktuelle Kalender gesichert werden.
+            <div></div>
+            1. auf dem alten Handy ein Backup erstellen
+            <div></div>
+            2. die Datei teilen (z.B.: über WhatsApp)
+            <div></div>
+            3. auf dem neuen Handy das Backup laden
             <div class="settings-section">
                 <button class="action-button" id="backupSettingsButton">Backup erstellen</button>
                 <button class="action-button" id="restoreSettingsButton">Backup laden</button>
