--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="header-section">
             <h1 id="currentYearDisplay">2025</h1>
         </div>
-        <h2>Schicht 2</h2>
+        <h2>Kalender</h2>
         <div class="month-grid">
         </div>
     </div>
