--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             style="--fa-animation-delay: 0.20s;">📞</span>
         <span class="header-icon info-icon-position beat-animation" id="openShiftInfoDialog" style="--fa-animation-delay: 0.60s;">ℹ️</span>
         <span id="todayButton" class="header-icon today-icon-position beat-animation" style="--fa-animation-delay: 0.40s;">🗓️</span>
-        <img src="https://images.seeklogo.com/logo-png/54/2/motherson-logo-png_seeklogo-544537.png" alt="Motherson Logo" class="logo" id="openSettingsDialog">
+        <img src="motherson-logo.png" alt="Motherson Logo" class="logo" id="openSettingsDialog">
+
         <div class="header-section">
             <h1 id="currentYearDisplay">2025</h1>
         </div>
