--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a href="tel:08402774827">08402 / 774827</a>
                 </li>
                 <li>
-                    <tspan>Vorarbeiter BMW U10:</span>
+                    <span>Vorarbeiter BMW U10:</span>
                     <a href="tel:08402774508">08402 / 774508</a>
                 </li>
                 <li>
