--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
 
             <h3>Weitere Informationen</h3>
             <div id="infoFilesList" class="info-files-list">
+                <li>
+                    <span>Arbeitskleidung:</span>
+                    <a href="https://forms.office.com/e/YzwV8pCFgZ">08402 / 774830</a>
+                </li>
                 <p class="loading-message">Lade Informationen...</p>
             </div>
         </div>
