--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <ul>
                 <li>
                     <span>Arbeitskleidung:</span>
-                    <a href="https://forms.office.com/e/YzwV8pCFgZ">08402 / 774858</a>
+                    <a href="https://forms.office.com/e/YzwV8pCFgZ">Zur Bestellung</a>
                 </li>
             </ul>
             <div id="infoFilesList" class="info-files-list">
