--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
                     <a href="tel:08402774858">08402 / 774858</a>
                 </li>
                 <li>
-                    <span>Vorarbeiter BMW U1x:</span>
+                    <span>Vorarbeiter BMW-U1x:</span>
                     <a href="tel:08402774098">08402 / 774098</a>
                 </li>
                 <li>
-                    <span>Vorarbeiter BMW U1x:</span>
+                    <span>Vorarbeiter BMW-U1x:</span>
                     <a href="tel:08402774827">08402 / 774827</a>
                 </li>
                 <li>
-                    <span>Vorarbeiter BMW U10:</span>
+                    <span>Vorarbeiter BMW-U10:</span>
                     <a href="tel:08402774508">08402 / 774508</a>
                 </li>
                 <li>
