index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="tel:08402774858">08402 / 774858</a>
                 </li>
                 <li>
-                    <span>Vorarbeiter BMW U1x:</span>
+                    <span>Vorarbeiter BMW-U1x:</span>
                     <a href="tel:08402774098">08402 / 774098</a>
                 </li>
                 <li>
